Added comment and signature

--- a/index.html
+++ b/index.html
@@ -165,6 +165,8 @@
         </div>
     </footer>
 
-    <!--        Done on 9/1/2024 -->
+    <!--        Done on 9/1/2024 
+                Md Tohibur Rahman Tauhid
+    -->
 </body>
 </html>
